--- a/lib/uno_web/components/layouts/root.html.heex
+++ b/lib/uno_web/components/layouts/root.html.heex
@@ -25,12 +25,15 @@
           setTheme(localStorage.getItem("phx:theme") || "system");
         }
         window.addEventListener("storage", (e) => e.key === "phx:theme" && setTheme(e.newValue || "system"));
-        
+
         window.addEventListener("phx:set-theme", (e) => setTheme(e.target.dataset.phxTheme));
       })();
     </script>
   </head>
   <body>
+    <.flash kind={:info} flash={@flash} />
+    <.flash kind={:error} flash={@flash} />
+
     {@inner_content}
   </body>
 </html>
