--- a/lib/uno_web/live/game/index.html.heex
+++ b/lib/uno_web/live/game/index.html.heex
@@ -15,6 +15,7 @@
     uno?={@p1_uno}
     hand={@p1_hand}
     playable_ids={@p1_playable_ids}
+    bot?={@p1_bot}
   />
 
   <div class="card bg-base-300 shadow-xl mb-4">
@@ -35,5 +36,6 @@
     uno?={@p2_uno}
     hand={@p2_hand}
     playable_ids={@p2_playable_ids}
+    bot?={@p2_bot}
   />
 </div>
