--- a/lib/uno_web/live/game/index.html.heex
+++ b/lib/uno_web/live/game/index.html.heex
@@ -1,6 +1,7 @@
 <div class="container mx-auto p-4 max-w-4xl" id="game-container" phx-hook="WildCardPrompt">
-  <div class="flex justify-end mb-4">
-    <button phx-click="new_game" class="btn btn-primary">New Game</button>
+  <div class="flex justify-between items-center mb-4">
+    <span class="text-sm opacity-60">Game #{@game_id}</span>
+    <button phx-click="redeal" class="btn btn-primary">Redeal</button>
   </div>
 
   <%= if @game_over do %>
